--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ remote_theme: "orderedlist/minimal"
 gems:
   - jekyll-sitemap
   - jekyll-feed
+  - jekyll-remote-theme
 exclude:
   - Gemfile
   - Gemfile.lock
