Add Contributing page

--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,8 @@ plugins:
   - jekyll-sitemap
   - jekyll-feed
   - jekyll-remote-theme
+include:
+  - CONTRIBUTING.md
 exclude:
   - Gemfile
   - Gemfile.lock
