Make list a Jekyll site on Netlify (#30)
* Setup Jekyll

* Setup Jekyll for Netlify

* Changes for Netlify

* Update Gemfile

* Add Hacktoberfest Logos

* Add images and yml and toml files

* Fix _config.yml

* Fix remote plugins and themes

* Fix _config.yml

* Fix Netlify build

* Customize layout

* Customize layout

* Updte Readme

* Fix Links

* Add Contributing page

* Add GitHub logo and buttons

* Add GitHub logo and buttons

* Update README.md

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,18 @@
-theme: jekyll-theme-minimal
+title: Hacktoberfest Swag List
+logo: /img/Hacktoberfest_2018_banner4.png
+description: There are many companies giving out free swag for Hacktoberfest and this list seeks to find them all!
+show_downloads: false
+google_analytics:
+remote_theme: "pages-themes/minimal"
+plugins:
+  - jekyll-sitemap
+  - jekyll-feed
+  - jekyll-remote-theme
+include:
+  - CONTRIBUTING.md
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - LICENSE
+  - CNAME
+repository: "crweiner/hacktoberfest-swag-list"
