--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Hacktoberfest Swag List
-logo: /img/Hacktoberfest_2018_banner4.png
+logo: /img/Hacktoberfest_19.png
 description: There are many companies giving out free swag for Hacktoberfest and this list seeks to find them all!
 show_downloads: false
 url: "https://hacktoberfestswaglist.com"
