--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,3 @@
 [build]
-  command = "jekyll build"
-  publish = "_site"
-
-[context.deploy-preview]
-  command = "jekyll build --drafts"
+  command = "mkdocs build"
+  publish = "site"
