--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,6 @@
 [build]
-  command = "mkdocs build"
+  command = "mkdocs build --config-file mkdocs-sample.yml"
   publish = "site"
+
+[build.environment]
+  RUBY_VERSION = "2.7.4"
