--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,20 @@ site_name: Hacktoberfest Swag List
 docs_dir: "docs"
 theme:
   name: material
+  palette: 
+    # Palette toggle for light mode
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+
+    # Palette toggle for dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
   
 plugins:
   - search:
