Add social plugin

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,6 +34,7 @@ repo_url: "https://github.com/crweiner/hacktoberfest-swag-list"
 edit_uri: "https://github.com/crweiner/hacktoberfest-swag-list/edit/master/docs"
 
 plugins:
+  - social
   - search:
       separator: '[\s\-\.]+'
       lang:
