feat: add social cards

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,6 +36,10 @@ plugins:
       separator: '[\s\-\.]+'
       lang:
         - en
+  - social:
+      cards_color:
+        fill: "#2E303E" 
+        text: "#FFFFFF"      
 # Page tree
 nav:
   - "Home": "index.md"
