--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,8 @@ Pygments = "==2.13.0"
 prompt_toolkit = "==3.0.31"
 pyyaml = "==6.0"
 Jinja2 = "==3.1.2"
+pillow = "*"
+cairosvg = "*"
 
 [dev-packages]
 invoke = "*"
