--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ site_url: "https://hacktoberfestswaglist.com"
 site_name: Hacktoberfest Swag List
 docs_dir: "docs"
 theme:
+  favicon: img/hacktoberfest-favicon.png
   name: material
   logo: img/Hfest-Badge-2-Color-Void.svg
   features: 
