--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,7 @@ docs_dir: "docs"
 theme:
   favicon: img/hacktoberfest-favicon.png
   name: material
-  logo: img/Hfest-Badge-2-Color-Void.svg
+  logo: img/favicon.ico
   features: 
     - navigation.tracking
   palette: 
