--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,9 +7,9 @@ site_url: "https://hacktoberfestswaglist.com"
 site_name: Hacktoberfest Swag List
 docs_dir: "docs"
 theme:
-  favicon: img/hacktoberfest-favicon.png
+  favicon: img/hacktoberfest-favicon.ico
   name: material
-  logo: img/favicon.ico
+  logo: img/Hfest-Badge-2-Color-Void.svg
   features: 
     - navigation.tracking
   palette: 
