--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 # Project information
-site_name: "Hacktoberfest Swag List 2022"
+site_name: "Hacktoberfest Swag List 2023"
 site_description: "Connecting contributors to open-source projects during Hacktoberfest"
 site_author: "crweiner"
 site_url: "https://hacktoberfestswaglist.com"
@@ -7,9 +7,9 @@ site_url: "https://hacktoberfestswaglist.com"
 site_name: Hacktoberfest Swag List
 docs_dir: "docs"
 theme:
-  favicon: img/hacktoberfest-favicon.ico
+  favicon: img/favicon.ico
   name: material
-  logo: img/Hfest-Badge-2-Color-Void.svg
+  logo: img/hf10_icon_fcd_rgb.png
   features: 
     - navigation.tracking
     - content.code.annotate
@@ -46,7 +46,7 @@ plugins:
 nav:
   - "Home": "index.md"
   - "Contributing": "contributing.md"
-  - "2022 Hacktoberfest Swag List": "list.md"
+  - "2023 Hacktoberfest Swag List": "list.md"
 
   # Customization
 extra_javascript:
@@ -62,7 +62,7 @@ extra:
       link: "https://twitter.com/c_dubbs"
   analytics:
     provider: google
-    property: UA-129265975-1
+    property: G-362126484
 
 #Extensions
 markdown_extensions:
