--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,7 @@ docs_dir: "docs"
 theme:
   favicon: img/favicon.ico
   name: material
-  logo: img/hf10_icon_fcd_rgb.png
+  logo: /img/horizontal_dark_green.png
   features: 
     - navigation.tracking
     - content.code.annotate
