--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,9 @@
 [build]
-  command = "mkdocs build --config-file mkdocs.yml"
+  command = """
+  pip3 install mkdocs mkdocs-material[imaging] markdown_link_attr_modifier &&
+  mkdocs build --config-file mkdocs.yml
+  """
   publish = "site"
 
 [build.environment]
-  RUBY_VERSION = "2.7.4"
+  PYTHON_VERSION = "3.8"
