--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,11 +9,11 @@ docs_dir: "docs"
 theme:
   favicon: img/favicon.ico
   name: material
-  logo: img/horizontal_deep_pink.png
-  features: 
+  logo: img/HF-Icon-Color-Light.png
+  features:
     - navigation.tracking
     - content.code.annotate
-  palette: 
+  palette:
     # Palette toggle for light mode
     - media: "(prefers-color-scheme: light)"
       scheme: default
@@ -27,7 +27,7 @@ theme:
       toggle:
         icon: material/brightness-4
         name: Switch to light mode
-  
+
 # Repository
 repo_name: "GitHub"
 repo_url: "https://github.com/crweiner/hacktoberfest-swag-list"
