--- a/.github/workflows/reviewdog-markdownlint.yml
+++ b/.github/workflows/reviewdog-markdownlint.yml
@@ -29,6 +29,5 @@ jobs:
           reporter: github-pr-review
           markdownlint_flags: '--config .markdownlint.yml **/*.md'
           level: error
-          filter_mode: diff
+          filter_mode: added
           fail_level: none
-          reviewdog_flags: '-diff="git diff HEAD^..HEAD"'
